Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,65 +1,59 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Fock states of being by crazy4pi314</title>
+    <meta name="description" content="sckaiser_home : ">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>sckaiser_home</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1 class="header">Fock states of being</h1>
-        <p class="header">Page of webyness</p>
 
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/crazy4pi314">View on GitHub</a>
 
+          <h1 id="project_title">sckaiser_home</h1>
+          <h2 id="project_tagline"></h2>
 
-        <ul>
-          <li><a class="buttons github" href="https://github.com/crazy4pi314">GitHub Profile</a></li>
-        </ul>
+        </header>
+    </div>
 
-      </header>
-      <section>
-        <h3>
-<a id="welcome-to-sarahs-greatest-achievement-to-date" class="anchor" href="#welcome-to-sarahs-greatest-achievement-to-date" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Sarah's greatest achievement to date.</h3>
-
-<p>Well not really, but ya know, coding stuff is hard.</p>
-
-<h2>
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h2>
 <a id="research-interests" class="anchor" href="#research-interests" aria-hidden="true"><span class="octicon octicon-link"></span></a>Research interests</h2>
-
-<p>Quantum stuff.  </p>
-
-<p>Photon stuff.  </p>
-
-<p>yah know the usual.  </p>
 
 <h2>
 <a id="publications" class="anchor" href="#publications" aria-hidden="true"><span class="octicon octicon-link"></span></a>Publications</h2>
 
-<p>This is where I will put all my papers when I get them.</p>
+<h2>
+<a id="conferences" class="anchor" href="#conferences" aria-hidden="true"><span class="octicon octicon-link"></span></a>Conferences</h2>
 
-<h3>
-<a id="confrences" class="anchor" href="#confrences" aria-hidden="true"><span class="octicon octicon-link"></span></a>Confrences</h3>
-
-<h3>
-<a id="outreach" class="anchor" href="#outreach" aria-hidden="true"><span class="octicon octicon-link"></span></a>Outreach</h3>
+<h2>
+<a id="outreach" class="anchor" href="#outreach" aria-hidden="true"><span class="octicon octicon-link"></span></a>Outreach</h2>
 
 <h2>
 <a id="contact" class="anchor" href="#contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h2>
+
+<p>Sarah Kaiser: <a href="mailto:sarah.c.kaiser@gmail.com">sarah.c.kaiser@gmail.com</a></p>
       </section>
-      <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		
+
+    
+
   </body>
 </html>
