convert plot to png

--- a/research/talks/Macquarie_seminar_2016/index.html
+++ b/research/talks/Macquarie_seminar_2016/index.html
@@ -180,7 +180,7 @@
 						## Why space QKD ##
 						[doi:10/bdnw](http://doi.org/bdnw)
 						<a href="http://doi.org/bdnw">
-							<img src="figures/loss.svg" style="width: 90%" alt="Space optical losses doi:10/bdnw">
+							<img src="figures/loss.png" style="width: 90%" alt="Space optical losses doi:10/bdnw">
 						</a>
 						
 						
