fixing figure paths

--- a/research/talks/macquarie_seminar_2016/index.html
+++ b/research/talks/macquarie_seminar_2016/index.html
@@ -145,7 +145,7 @@
 						</p> -->
 					</div>
 				
-					<img src="\figures\idqfront.jpg" alt="id Quantique Clavis 2" style="width: 100%;" />
+					<img src="figures/idqfront.jpg" alt="id Quantique Clavis 2" style="width: 100%;" />
 				
 				</section>
 
