fixed some typos

--- a/research/talks/macquarie_seminar_2016/index.html
+++ b/research/talks/macquarie_seminar_2016/index.html
@@ -245,8 +245,8 @@
 						  - Simpler space hardware
 						  - Other space QI experiments [doi:10/bdqf](http://doi.org/bdqf)
 						- Cons: 
-						  - lower key rate
-						  - detector radiation damage [doi:10/dg8xhd](http://doi.org/dg8xhd)
+						  - Higher loss
+						  - Detector radiation damage [doi:10/dg8xhd](http://doi.org/dg8xhd)
 
 						Note:
 						Dark count rates->QBER
