one addtion to presenter notes

--- a/research/talks/macquarie_seminar_2016/index.html
+++ b/research/talks/macquarie_seminar_2016/index.html
@@ -337,6 +337,8 @@
 						  - Trojan horse
 						  - Man in the middle
 						  - Site vulnerability
+						Note:
+						LASER DAMAGE IDEA!!!!!!!!!!!
 					</script>
 				</section>
 
