--- a/research/talks/thesis_defense/index.html
+++ b/research/talks/thesis_defense/index.html
@@ -58,7 +58,7 @@
 		</script>
 
 		<!--[if lt IE 9]>
-		<script data-src="lib/js/html5shiv.js"></script>
+		<script src="lib/js/html5shiv.js"></script>
 		<![endif]-->
 	</head>
 
@@ -234,7 +234,7 @@
 <!--==================================================================================-->
 				<section data-background="figures/risk-map-tracks.png" data-background-size="contain">
 					<h2 style="color: #fb3550;">Stratospheric balloons</h2>
-					<img class="fragment" data-src="figures/risk-satmap.png" alt="Google Maps">
+					<img class="fragment" src="figures/risk-satmap.png" alt="Google Maps">
 
 				</section>
 
@@ -253,12 +253,12 @@
 							</div>
 						</div>
 						Altitude threshold<br>
-						<img style="width: 45%" data-src="figures/risk-plot-altitude.png" alt="Altitude">
+						<img style="width: 45%" src="figures/risk-plot-altitude.png" alt="Altitude">
 				</section>
 <!--==================================================================================-->
 				<section >	
 					<h2>Transmitter placement results</h2>
-					<img style="width: 130%" data-src="figures/results-table.png" alt="Results">
+					<img style="width: 130%" src="figures/results-table.png" alt="Results">
 				</section>
 <!--==================================================================================-->
 				<section >	
@@ -269,17 +269,20 @@
 
 							</div>
 							<div class="right-col" style="width: 50%">
-								<img data-src="figures/risk-flight-payload-geometry.png" alt="pan-tilt def">
+								<img data-src="figures/risk-flight-payload-geometry.png" alt="Geometry model">
 							</div>
 					</div>
 				</section>
-
 
 <!--==================================================================================-->
 				<section data-background="figures/risk-mma-planegui.png" data-background-size="contain">	
 
 				</section>
-
+<!--==================================================================================-->
+				<section >	
+					<h2>Comms test flights</h2>
+					<img style="width: 80%" src="figures/risk-wifi-test.png" alt="test flights">
+				</section>
 <!--==================================================================================-->
 				<section>
 					<h1 style="font-size: 280%">Infrastructure:</h1>
@@ -423,8 +426,8 @@
 
 		</div>
 
-		<script data-src="lib/js/head.min.js"></script>
-		<script data-src="js/reveal.js"></script>
+		<script src="lib/js/head.min.js"></script>
+		<script src="js/reveal.js"></script>
 
 		<script>
 
@@ -443,13 +446,13 @@
 
 				// Optional reveal.js plugins
 				dependencies: [
-					{ data-src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
-					{ data-src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-					{ data-src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-					{ data-src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
-					{ data-src: 'plugin/zoom-js/zoom.js', async: true },
-					{ data-src: 'plugin/notes/notes.js', async: true },
-					{ data-src: 'plugin/math/math.js', async: true }
+					{ src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
+					{ src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+					{ src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+					{ src: 'plugin/zoom-js/zoom.js', async: true },
+					{ src: 'plugin/notes/notes.js', async: true },
+					{ src: 'plugin/math/math.js', async: true }
 				]
 			});
 
@@ -553,7 +556,7 @@
 <!-- 				<section data-markdown data-background-video="figures/fiber-fuse-crop-nosound.mp4" >
 					<script type="text/template">
 						<h2 class="fragment" data-fragment-index="1">Fiber fusing</h2>
-						<img class="fragment" data-fragment-index="1"data-src="figures/fiberfuse.jpg" alt="Laser damage fiber close-up" style="height: 10% width: 100%">
+						<img class="fragment" data-fragment-index="1"src="figures/fiberfuse.jpg" alt="Laser damage fiber close-up" style="height: 10% width: 100%">
 
 					</script>
 				</section> -->
