removing confusing dots

--- a/research/talks/photonics_connections_2016/index.html
+++ b/research/talks/photonics_connections_2016/index.html
@@ -336,29 +336,14 @@
 							<img data-src="figures/comp-apt-integration-photo.jpg" alt="Geometry model">
 						</div>
 					</div>
+					<ul>
+						<li><p> Transmission, raw key rate, and QBER uniform over pointing range</p></li>
+					</ul>
 					<aside class="notes">
         				lowest order adaptive optics, beam steering. extensive testing and characterization. 
     				</aside>
 				</section>
-<!--==================================================================================-->
-				<section>
-								<h2>QBER</h2>
-								<img style="width: 80%" data-src="figures/comp-apt-phase2-qber.png" alt="QBER">
-<!-- 						<div class="two-col-container">
-							<div class="left-col" style="width: 50%">
-							Total Counts
-								<img data-src="figures/comp-apt-phase2-counts.png" alt="counts">
 
-							</div>
-							<div class="right-col" style="width: 50%">
-							QBER
-								<img data-src="figures/comp-apt-phase2-qber.png" alt="QBER">
-							</div>
-						</div>
-						<div align="center">
-						 Secret key<br>
-						<img style="width: 50%" src="figures/comp-apt-phase2-seckey.png" alt="secret key"></div>  -->
-				</section>
 
 <!--==================================================================================-->
 <!-- 				<section  data-markdown>
