trying to get the more you know to show up

--- a/research/talks/crypto_club/index.html
+++ b/research/talks/crypto_club/index.html
@@ -181,14 +181,13 @@
 				</section>
 
 <!--==================================================================================-->
-				<section data-background="/figures/the-more-you-know-test.png">
+				<section data-background="/figures/the-more-you-know-test.png" data-background-size=cover>
 					<h2> Common Myths and Misconceptions </h2>
 						<ul>
 						    <li><p class="fragment"> Quantum computers are <strong>NOT</strong> universally faster or more powerful than classical computers</p>
 							<li><p class="fragment"> Quantum computers will <strong>NOT</strong> be here tomorrow. <br>have:100 qubits / need: 100 million </p>
 							<li><p class="fragment"> Dwave is <strong> NOT </strong> a quantum computer. Evidence shows quantum annealer at best </p>
 							<li><p class="fragment"> There is no one right material or system to make qubits </p>
-						
 						</ul>
 				</section>
 
