Updating for pensar and baby book link :)

--- a/research/talks/LFQIS-2017/index.html
+++ b/research/talks/LFQIS-2017/index.html
@@ -365,7 +365,7 @@
                 <section data-markdown>
                     <script type="text/template">
                         ## A tail of two emergenci(ti)es:
-                        <img src="figures\fire.jpg" alt="disc-o inferno" style="width:80%;"/>
+                        <img src="../../../public/media/figures/fire.jpg" alt="disc-o inferno" style="width:80%;"/>
 
                         note:
                         
@@ -378,10 +378,10 @@
                     <div class="two-col-container">
                         <h2>Hardware reliability</h2>
                         <div class="left-col" style="width: 50%">
-                            <img src="figures\nuc.jpg" alt="Next unit of computing"> 
+                            <img src="../../../public/media/figures/nuc.jpg" alt="Next unit of computing"> 
                         </div>
                         <div class="right-col" style="width: 50%">
-                            <img src="figures\nuc-guts.jpg" alt="guts of nuc">
+                            <img src="../../../public/media/figures/nuc-guts.jpg" alt="guts of nuc">
                         </div>
                     </div>
 
