--- a/research/talks/UTS_seminar_2017/index.html
+++ b/research/talks/UTS_seminar_2017/index.html
@@ -133,8 +133,8 @@
 						#### Quantum phase ####
 						<div class="two-col-container">
 							<div class="left-col" style="width: 70%">
-								![http://swissquantum.idquantique.com/](http://swissquantum.idquantique.com/IMG/jpg/bb84.jpg "BB84 diagram")
-						
+								<img src="../../../public/media/figures/idq-bb84.png" alt="diagram for qkd concept" style="width: 80%;" />
+								<!-- ![http://swissquantum.idquantique.com/](http://swissquantum.idquantique.com/IMG/jpg/bb84.jpg "BB84 diagram") -->
 								[doi:10/3d6](http://doi.org/3d6)
 							</div>
 							<div class="right-col" style="width: 30%">
@@ -157,8 +157,8 @@
 						#### Classical phase ####
 						<div class="two-col-container">
 							<div class="left-col" style="width: 70%">
-								![http://swissquantum.idquantique.com/](http://swissquantum.idquantique.com/IMG/jpg/bb84.jpg "BB84 diagram")
-						
+								<img src="../../../public/media/figures/idq-bb84.png" alt="diagram for qkd concept" style="width: 80%;" />
+								<!-- ![http://swissquantum.idquantique.com/](http://swissquantum.idquantique.com/IMG/jpg/bb84.jpg "BB84 diagram") -->
 								[doi:10/3d6](http://doi.org/3d6)
 							</div>
 							<div class="right-col" style="width: 30%">
