--- a/research/talks/thesis_defense/index.html
+++ b/research/talks/thesis_defense/index.html
@@ -211,7 +211,7 @@
 				<section  data-markdown>
 					<script type="text/template">
 						### Example QKD protocol: BB84 ###
-						<img style="width: 90%" data-src="http://swissquantum.idquantique.com/IMG/jpg/bb84.jpg" alt="BB84 diagram">	
+						<img style="width: 90%" data-src="../../../public/media/figures/idq-bb84.png" alt="BB84 diagram">	
 						<a href="http://doi.org/bdnw">					
 								doi:10/3d6
 						</a>
