more outline, starting slides for QML talk

--- a/research/talks/qml_portland_2018/index.html
+++ b/research/talks/qml_portland_2018/index.html
@@ -75,11 +75,23 @@
 <!--==================================================================================-->
 				<section data-markdown>
 					<script type="text/template">
-						# Part 1:#
-						## Quantum Resources ##
+						# Part 1:  
+						### Quantum Expectations ###
+						<p class="fragment"> _What can we reasonably expect from quantum resources?_ </p>
+					</script>
+				</section>
+<!--==================================================================================-->
+				<section data-markdown>
+					<script type="text/template">
+					Poll: 
+					What do you know about quantum computes and what they can do?
 					</script>
 				</section>
 
+<!--==================================================================================-->			
+				<section data-markdown data-background="../../../public/media/figures/wtf-quantum.png" data-background-size=contain>
+					
+				</section>
 <!--==================================================================================-->
 				<section>
 					<!-- <h2>What is Quantum Computing?</h2> -->
