added DJ fig and some last fixes for QML

--- a/research/talks/qml_portland_2018/index.html
+++ b/research/talks/qml_portland_2018/index.html
@@ -67,7 +67,9 @@
 					<hr />
 
 					<p>
-						<strong> Portland Data Science Group 04 Oct 2018 </strong><br>
+						<strong> Portland Data Science Group 
+						<br>
+						04 Oct 2018 </strong><br>
 						<a href="https://www.sckaiser.com">Sarah Kaiser</a> <br>
 					</p>
 
@@ -342,9 +344,17 @@
 					<script type="text/template">
 					#### Deutsch–Jozsa Algorithim ####
 					## Problem statement ##
-					<text style="color:#008B8B">**GIVEN:**</text> A black box quantum operation which takes 2 binary inputs and produces either a 0 or a 1 as output. We are promised that the box is either constant (0 on all outputs or 1 on all outputs) or balanced. (returns 1 for half of the input domain and 0 for the other half);
+					<text style="color:#008B8B">**GIVEN:**</text> A black box quantum operation which takes 1 input bit and produces either a 0 or a 1 as output. We are promised that the box is either _constant_ or _balanced_. 
 					
-					<text style="color:#008B8B">**GOAL:**</text> to determine if the box output is constant or balanced by evaluating sample inputs.
+					<text style="color:#008B8B">**GOAL:**</text> to determine if the box output is _constant_ or _balanced_ by evaluating sample inputs.
+					</script>
+				</section>
+
+<!--==================================================================================-->
+				<section data-markdown>
+					<script type="text/template">
+					#### Deutsch–Jozsa Algorithim ####
+					<img data-src="../../../public/media/figures/twobitDJ.png" alt="bloch sphere" style="width: 80%;"/>
 					</script>
 				</section>
 
@@ -372,9 +382,9 @@
 				<section data-markdown>
 					<script type="text/template">
 						#### Short anwser: ####
-						## There is smoke but no fire ##
+						### There is smoke but no fire ###
 						<ul>
-						<li><p class="fragment"> Most known QML algorithims make great _subroutines_ in larger algorithims. </p></li>
+						<li><p class="fragment"> Most known QML algorithims make great <text style="color:#008B8B">_subroutines_</text> in larger algorithims. </p></li>
 						<li><p class="fragment"> We need structure for problems that does not blow away advantages of translating between classical and quantum.</p></li>
 					</ul>
 					</script>
