final edits used for qml talk

--- a/research/talks/qml_portland_2018/index.html
+++ b/research/talks/qml_portland_2018/index.html
@@ -71,6 +71,8 @@
 						<br>
 						04 Oct 2018 </strong><br>
 						<a href="https://www.sckaiser.com">Sarah Kaiser</a> <br>
+						@crazy4pi314
+						<br>
 					</p>
 
 				</section>	
@@ -458,6 +460,7 @@
 				<section data-markdown>
 					<script type="text/template">
 					##Thanks!##
+					[More on QML from Quantum Zoo](https://math.nist.gov/quantum/zoo/)
 					<img data-src="../../../public/media/figures/dwave-fail.jpg" alt="bloch sphere" style="width: 80%;"/>
 
 					</script>
