--- a/research/talks/ml4all_2019/index.html
+++ b/research/talks/ml4all_2019/index.html
@@ -80,10 +80,10 @@
 					## Quick introduction!
 					<div class="two-col-container">
 						<div class="left-col">
-							<img data-src="../../../public/media/figures/pensar-bio.png" alt="Selfie at work with pink hard hat" style="width: 75%;"/>
+							<img data-src="../../../public/media/figures/pensar-bio.png" alt="Selfie at work with pink hard hat" style="width: 80%;"/>
 						</div>	
 						<div class="right-col">
-							<img data-src="../../../public/media/figures/kaiser-book-collection.jpg" alt="Kaiser Baby books" style="width: 100%;"/>
+							<img data-src="../../../public/media/figures/kaiser-book-collection.jpg" alt="Kaiser Baby books" style="width: 80%;"/>
 						</div>
 					</div>
 
@@ -135,8 +135,7 @@
 						### How do you build a classical computer? ###
 						- Information storage $\rightarrow$ magnetic bits
 						- Manipulations $\rightarrow$ digital logic
-						- Readout $\rightarrow$ measure magnetic field
-						- Represenataion $\rightarrow$ "0" or "1"
+						- Readout $\rightarrow$ measure magnetic field 
 
 						<em>ex. register of 3 bits</em> "101"
 					</script>
@@ -155,7 +154,8 @@
 <!--==================================================================================-->
 				<section>
 					<h3>QUBITS!</h3>
-					To represent $n$ qubits, we use a complex valued vector $2^n$ elements long, called a <em>ket</em>.
+					To represent the state of $n$ qubits, we use a complex valued vector $2^n$ elements long, called a <em>ket</em>.
+					<br>
 					<br>
 					$$|x_{n}\rangle = \begin{bmatrix} \alpha_{1}\\ \alpha_{2}\\ \alpha_{3}\\ ...\\ \alpha_{2^n}\end{bmatrix}$$
 
@@ -164,7 +164,8 @@
 <!--==================================================================================-->
 				<section>
 					<h4>Example: 3 qubit register</h4>
-					To represent 3 qubits, we use a complex valued vector $2^3 = 8$ elements long.
+					To represent the state of 3 qubits, we use a complex valued vector $2^3 = 8$ elements long.
+					<br>
 					<br>
 					$$|💖\rangle = \begin{bmatrix} 0\\ 1\\ 0\\ 0\\ 0\\ 	0\\ 0\\ 0 \end{bmatrix}$$
 
@@ -174,16 +175,16 @@
 				<section data-background="../../../public/media/figures/the-more-you-know-darker.png" data-background-size=cover>
 					<h2> TL;DR on Quantum Computing</h2>
 						<ul>
-						    <li><p class="fragment"> Quantum computers are <strong>NOT</strong> universally faster or more powerful than classical computers</p>
-							<li><p class="fragment"> Quantum computers will <strong>NOT</strong> be here tomorrow. <br>have:100 qubits / need: 100 million </p>
-								<li><p class="fragment"> Most all commercial hardware is only a few qubits or a quantum annealer at best </p>
+						    <li><p class="fragment"> Quantum computers are not <strong>universally</strong> faster or more powerful than classical computers</p>
+							<li><p class="fragment"> We need orders of magnitude more qubits than we currently have for some applications </p>
+								<li><p class="fragment"> Current commercial hardware is a few qubits or a quantum annealer, not what is commonly considered a full "computer" </p>
 						</ul>
 				</section>
 
 <!--==================================================================================-->
 				<section data-markdown>
 					<script type="text/template">
-						# What Now! # 
+						# What now? # 
 						<div class="fragment">Let's use software tools to help us learn and simulate how quantum computers work!</div>
 					</script>
 				</section>
@@ -266,7 +267,7 @@
 					<script type="text/template">
 					## Asking Less is More ##
 					<ul>
-							<li><p class="fragment">Rather than asking for a description of the function in the box, we are looking for generalized behaviours about the box.</p></li>
+							<li><p class="fragment">We only want to know one yes/no question about the function, not the entiren function</p></li>
 							<li><p class="fragment">Quantum resources are not necessarily faster or better, but by asking the right questions you can play to their strengths!</p></li>
 					</ul>
 					</script>
@@ -275,7 +276,7 @@
 <!--==================================================================================-->
 				<section data-markdown data-background="../../../public/media/figures/kirby-at-laptop.jpg" data-background-size=contain>
 					<script type="text/template">
-					#Demo#
+					#<div style="color:#008B8B">Demo</div>#
 					</script>
 				</section>
 
