little bit of re-arrangement

--- a/research/talks/ml4all_2019/index.html
+++ b/research/talks/ml4all_2019/index.html
@@ -410,8 +410,8 @@
 				<section >
 					<h2>Takeaways:</h2>
 						<ul>
-						    <li><p class="fragment">Keep it real* when reading a/b quantum computing 😎</p></li>
-								<li><p class="fragment">Quantum resources necessitate changing how we think about algorithms!</p></li>
+						    <li><p class="fragment">Keep it real* when reading about quantum computing 😎</p></li>
+								<li><p class="fragment">Quantum resources necessitate changing how we think about algorithms</p></li>
 								<li><p class="fragment">Quantum machine learning is exciting, but very alpha</p>
 								</li>
 						</ul>
