--- a/research/talks/ml4all_2019/index.html
+++ b/research/talks/ml4all_2019/index.html
@@ -298,6 +298,11 @@
 				</section>
 
 <!--==================================================================================-->
+				<section>
+					<iframe class="stretch" src="http://localhost:8888/notebooks/quantum-perceptron-python.ipynb"></iframe>
+				</section>
+
+<!--==================================================================================-->
 				<section data-markdown>
 					<script type="text/template">
 					#### quantum algorithm review ####
@@ -324,7 +329,7 @@
 						#### How can QC help ML? ####
 						## Short answer: 🤔##
 						<ul>
-						<li><p class="fragment"> Most known QML algorithms make great <text style="color:#008B8B">_subroutines_</text> in larger algorithms </p></li>
+						<li><p class="fragment"> Most known quantum machine learning algorithms make great <text style="color:#008B8B">_subroutines_</text> in larger algorithms </p></li>
 						<li><p class="fragment"> We need structure for problems that does not blow away advantages of translating between classical and quantum</p></li>
 					</ul>
 					</script>
@@ -367,7 +372,7 @@
 						- If you try to read out $|x\rangle$, you will do $\log$ worse than classical, need multiple copies
 						- So either we have to make $|x\rangle$ very small, or only want to know some restricted information about $|x\rangle$
 
-						<small><em>For an good reference on HHL, see [Quantum Algorithm for Data Fitting](https://doi.org/10.1103/PhysRevLett.109.050505).</em></small>
+						<small><em>For a good reference on applications of HHL, see [Quantum Algorithm for Data Fitting](https://doi.org/10.1103/PhysRevLett.109.050505).</em></small>
 					</script>
 				</section>
 <!--==================================================================================-->
@@ -375,7 +380,7 @@
 					<script type="text/template">
 						#### Example 2: ####
 						## Quantum Perceptron ##
-						
+						<a title="Mayranna [CC BY-SA 3.0 (https://creativecommons.org/licenses/by-sa/3.0)], via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File:Perceptron_moj.png"><img width="512" alt="Perceptron moj" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8c/Perceptron_moj.png/512px-Perceptron_moj.png"></a>
 <!--TODO: finish-->
 
 					</script>
@@ -395,7 +400,7 @@
 					<script type="text/template">
 						## Quantum Neural Nets ##
 						
-						- We know we train restricted boltzman machines faster on a quantum computer, but encoding the problem in qubits you blow away 😞
+						- We know we can train restricted Boltzmann machines faster on a quantum computer, but encoding the problem in qubits you blow away any advantages 😞
 
 						For more look here: [Quantum Machine Learning](https://arxiv.org/abs/1611.09347)
 <!--TODO: review-->	
