--- a/research/talks/ml4all_2019/index.html
+++ b/research/talks/ml4all_2019/index.html
@@ -116,7 +116,7 @@
 <!--==================================================================================-->
 				<section data-markdown>
 					<script type="text/template">
-					### Hardware model for quantum computer###
+
 					<img data-src="../../../public/media/figures/what-is-qc-ML4ALL19.png" alt="progression from bit to qubit" style="width: 100%;"/>
 												
 					<!--<em class="fragment">N.B. similar to use case for GPUs</em>-->
@@ -202,8 +202,8 @@
 		<script type="text/template">
 		### What can we do soon with quantum devices?###
 		<ul>
-			<li><p class="fragment"> Chemistry and materials science</p></li> 
 			<li><p class="fragment"> Cryptography</p></li>
+			<li><p class="fragment"> Chemistry and materials science → fixing nitrogen?</p></li> 
 			<li><p class="fragment"> Machine learning?</p></li>
 		</ul>
 		</script>
@@ -276,7 +276,7 @@
 					<section data-markdown>
 							<script type="text/template">
 							### How do I know if I should use quantum resources for my problem? ###
-							<div class="fragment"><em>There are no hard and fast rules...</em>😭</div>
+							<div class="fragment"><em>There are no easy rules...</em>😭</div>
 							</script>
 						</section>
 
@@ -417,7 +417,7 @@
 								</li>
 						</ul>
 
-						<p class="fragment"><a href="https://math.nist.gov/quantum/zoo/">More on QML from Quantum Zoo</a></p>
+						<p class="fragment"><a href="https://math.nist.gov/quantum/zoo/">More on QML from Quantum Model Zoo</a></p>
 
 				</section>
 <!--									<ul class="square">
@@ -430,6 +430,8 @@
 					##Thanks!##
 
 					[docs.microsoft.com/quantum](https://docs.microsoft.com/en-us/quantum/)
+
+					[qsharp.community](https://qsharp.community)
 
 					Slides + demos at:
 					[sckaiser.com](https://www.sckaiser.com/)
