--- a/research/talks/ml4all_2019/index.html
+++ b/research/talks/ml4all_2019/index.html
@@ -202,7 +202,12 @@
 		### What can we do soon with quantum devices?###
 		<ul>
 			<li><p class="fragment"> Cryptography</p></li>
-			<li><p class="fragment"> Chemistry and materials science → fixing nitrogen?</p></li> 
+			<li> <p class="fragment">Chemistry and materials science
+					<ul>
+						<li><p class="fragment">Nitrogen Fixation</p></li>
+					</ul>
+				</p> 
+			</li>
 			<li><p class="fragment"> Machine learning?</p></li>
 		</ul>
 		</script>
@@ -263,10 +268,11 @@
 						</script>
 					</section>
 
-	<!--==================================================================================-->
+	<!--====================================
 					<section>
 						<iframe class="stretch" src="http://localhost:8888/notebooks/deutsch-jozsa-demo.ipynb"></iframe>
 					</section>
+	==============================================-->
 <!--==================================================================================-->
 					<section data-markdown>
 							<script type="text/template">
@@ -392,23 +398,37 @@
 					</script>
 				</section>
 
-
-<!--==================================================================================-->
+	<!--==================================================================================-->
+					<section data-markdown data-background="../../../public/media/figures/kirby-at-laptop.jpg" data-background-size=contain>
+						<script type="text/template">
+						#<div style="color:#008B8B">Demo</div>#
+						</script>
+					</section>
+<!--=======================================
 				<section>
 					<iframe class="stretch" src="http://localhost:8888/notebooks/quantum-perceptron-python.ipynb"></iframe>
 				</section>
-
+===========================================-->
 
 <!--==================================================================================-->
-				<section data-markdown>
-					<script type="text/template">
-						## Quantum Neural Nets ##
-						
-						- We can train restricted Boltzmann machines faster on a quantum computer
-						-	Encoding the problem in qubits is a problem, need qRAM to make useful	
+				<section>
 
-						For more look here: [Quantum Machine Learning](https://arxiv.org/abs/1611.09347)
-					</script>
+						<h3> Quantum Neural Nets </h3>
+
+						<div class="two-col-container">
+						<div class="left-col">
+					<img data-src="../../../public/media/figures/restricted-boltzmann.png" alt="diagram of a restricted boltzmann machine" style="width: 80%;"/>
+						</div>	
+						<div class="right-col">
+						<ul>
+							<li>We can train restricted Boltzmann machines faster on a quantum computer <br></li>
+							<li>Encoding the problem in qubits is a problem, need qRAM to make useful<br></li>
+						</ul>
+						<br>
+						<small><em>For more look here: <a href="https://arxiv.org/abs/1611.09347">Quantum Machine Learning</a></em></small>
+						</div>
+					</div>
+
 				</section>
 
 			
