updating slides and website front page

--- a/research/talks/ml4all_2019/index.html
+++ b/research/talks/ml4all_2019/index.html
@@ -126,7 +126,6 @@
 			<section data-markdown>
 					<script type="text/template">
 					#### What represents the smallest unit of information on your laptop? ####
-					## BITS! ##
 				</script>
 			</section>
 
@@ -195,7 +194,15 @@
 
 				</section>
 =================================================-->
-
+<!--==================================================================================-->
+				<section data-background="../../../public/media/figures/the-more-you-know-darker.png" data-background-size=cover>
+					<h2> TL;DR on quantum computing</h2>
+						<ul>
+							<li><p class="fragment"> Quantum computers are <strong>not universally</strong> faster or more powerful. Think like GPUs!</p>
+							<li><p class="fragment"> The applications that are exciting in the near term are not necessarily the ones hyped.
+							<li><p class="fragment"> We can start <strong>today</strong> programming and playing around with early hardware and simulators!  </p>
+						</ul>
+				</section>	
 <!--==================================================================================-->
 	<section data-markdown>
 		<script type="text/template">
@@ -221,15 +228,7 @@
 				</section>
 =================================-->
 
-<!--==================================================================================-->
-				<section data-background="../../../public/media/figures/the-more-you-know-darker.png" data-background-size=cover>
-					<h2> TL;DR on quantum computing</h2>
-						<ul>
-							<li><p class="fragment"> Quantum computers are <strong>not universally</strong> faster or more powerful. Think like GPUs!</p>
-							<li><p class="fragment"> The applications that are exciting in the near term are not necessarily the ones hyped.
-							<li><p class="fragment"> We can start <strong>today</strong> programming and playing around with early hardware and simulators!  </p>
-						</ul>
-				</section>	
+
 <!--==================================================================================-->
 				<section data-markdown >
 					<script type="text/template">
@@ -458,6 +457,8 @@
 					[docs.microsoft.com/quantum](https://docs.microsoft.com/en-us/quantum/)
 
 					[qsharp.community](https://qsharp.community)
+
+					[_Learn Quantum Computing with Python and Q#_](https://www.manning.com/books/learn-quantum-computing-with-python-and-q-sharp)
 
 					Slides + demos at:
 					[sckaiser.com](https://www.sckaiser.com/)
