adding code repo links!

--- a/research/talks/ml4all_2019/index.html
+++ b/research/talks/ml4all_2019/index.html
@@ -66,9 +66,10 @@
 	
 					<br>
 					<p>
-						<strong> #ML4ALL </strong> | <strong> 30 April 2019 </strong><br>
-						<a href="https://www.sckaiser.com">Sarah Kaiser</a> <br>  
-						<a href="https://twitter.com/crazy4pi314">@crazy4pi314</a>
+						<strong> #ML4ALL </strong> | <strong> 30 April 2019 </strong><br><br>
+						<a href="https://www.sckaiser.com">Sarah Kaiser</a> <br>	
+						<a href="https://twitter.com/crazy4pi314">@crazy4pi314</a><br> 
+						Pensar Development 
 						<br>
 					</p>
 
@@ -264,6 +265,9 @@
 					<section data-markdown data-background="../../../public/media/figures/kirby-at-laptop.jpg" data-background-size=contain>
 						<script type="text/template">
 						#<div style="color:#008B8B">Demo</div>#
+
+
+						<small><em>Code here: <a href="https://github.com/crazy4pi314/ml4all-quantum-perceptron">GitHub</a></em></small>
 						</script>
 					</section>
 
@@ -392,16 +396,17 @@
 						#### Example 2: ####
 						## Quantum Perceptron ##
 						<a title="Mayranna [CC BY-SA 3.0 (https://creativecommons.org/licenses/by-sa/3.0)], via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File:Perceptron_moj.png"><img width="512" alt="Perceptron moj" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8c/Perceptron_moj.png/512px-Perceptron_moj.png"></a>
-<!--TODO: finish-->
 
 					</script>
 				</section>
 
 	<!--==================================================================================-->
-					<section data-markdown data-background="../../../public/media/figures/kirby-at-laptop.jpg" data-background-size=contain>
-						<script type="text/template">
-						#<div style="color:#008B8B">Demo</div>#
-						</script>
+					<section  data-background="../../../public/media/figures/kirby-at-laptop.jpg" data-background-size=contain>
+
+						<h1><div style="color:#008B8B">Demo</div></h1>
+
+						<small><em>Code here: <a href="https://github.com/crazy4pi314/ml4all-quantum-perceptron">GitHub</a></em></small>
+
 					</section>
 <!--=======================================
 				<section>
